--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
   riverpod_zap:
     hosted: https://simonbinder.eu
     version: ^0.1.0
+  dio: ^4.0.4
 
 dev_dependencies:
   build_runner: ^2.1.7
